@@ -215,6 +215,7 @@ Like eclipse's Ctrl+Alt+F."
 ;; (global-set-key (kbd "<M-up>") 'move-line-up)
 ;; (global-set-key (kbd "<M-down>") 'move-line-down)
 (global-set-key [M-f8] 'format-region)
+(global-set-key (kbd "ESC <f8>") 'format-region)
 (global-set-key (kbd "C-S-f") 'format-region)
 (global-set-key (kbd "C-=") 'align)
 (global-set-key (kbd "M-P") 'previous-buffer)
@@ -223,6 +224,7 @@ Like eclipse's Ctrl+Alt+F."
                 (lambda () (interactive) (switch-to-buffer (other-buffer))))
 (global-set-key (kbd "C-x C-b") 'ibuffer)
 (global-set-key (kbd "C-M-;") 'comment-or-uncomment-region)
+(global-set-key (kbd "ESC M-;") 'comment-or-uncomment-region)
 (global-set-key (kbd "C-c q") 'auto-fill-mode)
 (global-set-key [f4] 'next-error)
 (global-set-key [S-f4] 'previous-error)
