@@ -117,6 +117,7 @@
   (define-key c-mode-map [M-f12] 'sourcepair-load)
   (define-key c++-mode-map [M-f12] 'sourcepair-load)
   (define-key objc-mode-map [M-f12] 'sourcepair-load)
+  (define-key c-mode-base-map (kbd "ESC <f12>") 'sourcepair-load)
   (setq sourcepair-source-extensions
         '(".cpp" ".cxx" ".c++" ".CC" ".cc" ".C" ".c" ".mm" ".m"))
   (setq sourcepair-header-extensions
