@@ -66,21 +66,26 @@
     (define-key c-mode-base-map "\C-c " 'semantic-ia-complete-symbol))
   (define-key c-mode-base-map (kbd "M-n") 'semantic-ia-complete-symbol-menu)
   (define-key c-mode-base-map [M-S-f12] 'semantic-analyze-proto-impl-toggle)
-  (global-set-key [f12] 'semantic-ia-fast-jump)
-  (global-set-key [C-f12] 'semantic-ia-fast-jump)
+
+  (defun semantic-ia-fast-jump-back ()
+    (interactive)
+    (if (ring-empty-p (oref semantic-mru-bookmark-ring ring))
+        (error "Semantic Bookmark ring is currently empty"))
+    (let* ((ring (oref semantic-mru-bookmark-ring ring))
+           (alist (semantic-mrub-ring-to-assoc-list ring))
+           (first (cdr (car alist))))
+      (if (semantic-equivalent-tag-p (oref first tag) (semantic-current-tag))
+          (setq first (cdr (car (cdr alist)))))
+      (semantic-mrub-switch-tags first)))
+  (defun semantic-ia-fast-jump-or-back (&optional back)
+    (interactive "P")
+    (if back
+        (semantic-ia-fast-jump-back)
+      (semantic-ia-fast-jump (point))))
+  (global-set-key [f12] 'semantic-ia-fast-jump-or-back)
+  (global-set-key [C-f12] 'semantic-ia-fast-jump-or-back)
+  (global-set-key [S-f12] 'semantic-ia-fast-jump-back)
   ;; (global-set-key [S-f12] 'pop-global-mark)
-  (global-set-key [S-f12]
-                  (lambda ()
-                    (interactive)
-                    (if (ring-empty-p (oref semantic-mru-bookmark-ring ring))
-                        (error "Semantic Bookmark ring is currently empty"))
-                    (let* ((ring (oref semantic-mru-bookmark-ring ring))
-                           (alist (semantic-mrub-ring-to-assoc-list ring))
-                           (first (cdr (car alist))))
-                      (if (semantic-equivalent-tag-p (oref first tag)
-                                                     (semantic-current-tag))
-                          (setq first (cdr (car (cdr alist)))))
-                      (semantic-mrub-switch-tags first))))
 
   (pulse-toggle-integration-advice (if window-system 1 -1))
   (defadvice cua-exchange-point-and-mark (after pulse-advice activate)
@@ -131,7 +136,8 @@
             ("c" . ("h"))
             ("m" . ("h"))
             ("mm" . ("h"))))
-    (define-key c-mode-base-map [M-f12] 'eassist-switch-h-cpp)))
+    (define-key c-mode-base-map [M-f12] 'eassist-switch-h-cpp)
+    (define-key c-mode-base-map (kbd "ESC <f12>") 'eassist-switch-h-cpp)))
 
 ;; ecb
 (when (require 'ecb nil 'noerror)
