@@ -1,3 +1,7 @@
+2010-04-19  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Add semantic-ia-fast-jump-or-back, bind to f12.
+
 2010-04-16  Meteor Liu  <meteor1113@gmail.com>
 
 	* dotemacs.sample: Rename to .emacs.
